[Batch] Compute JAVA_OPTIONS based on the Java version.